[package]
name = "jira-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ellipse = "0.2.0"
itertools = "0.11.0"
clearscreen = "2.0.1"

[dev-dependencies]
tempfile = "3.3.0"
